# dc-talk

./: README.md  notes.md  pyproject.toml
examples/: ex1.py  ex10.py  ex2.py  ex3.py  ex4.py  ex5.py  ex6.py  ex7.py  ex8.py  ex9.py
talk/: ex2.py  ex4.py  ex5.py  ex6.py  ex7.py
