[tool.poetry]
name = "dc-talk"
version = "0.1.0"
description = ""
authors = ["konradhalas <halas.konrad@gmail.com>"]
readme = "README.md"
packages = [{include = "dc_talk"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
dacite = "^1.8.1"
mypy = "^1.3.0"
black = "^23.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
